# hatui

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: package.json  tailwind.config.js  vite.config.js
docs/app/scripts/: main.js
docs/app/styles/: main.css
docs/app/templates/: base.njk  index.njk  page.njk
docs/app/templates/components/: footer.njk  nav.njk
docs/content/: config.yaml
docs/content/pages/: api.md  installation.md  usage.md
src/hatui/: __init__.py  __main__.py  app.py  client.py
tests/: __init__.py  test_app.py  test_client.py
workflows/: deploy.yml  preview.yml
