[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hatui"
version = "0.1.0"
description = "Home Assistant Terminal User Interface"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "tonynv" }
]
keywords = ["home-assistant", "tui", "terminal", "dashboard", "smart-home"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "textual>=0.47.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
hatui = "hatui.app:main"

[project.urls]
Homepage = "https://github.com/tonynv/hatui"
Repository = "https://github.com/tonynv/hatui"
Issues = "https://github.com/tonynv/hatui/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hatui"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
